@@ -29,6 +29,7 @@ export(poolCoverage)
 export(predictSomatic)
 export(preprocessIntervals)
 export(processMultipleSamples)
+export(readAllelicCountsFile)
 export(readCoverageFile)
 export(readCurationFile)
 export(readLogRatioFile)
@@ -44,6 +45,8 @@ import(IRanges)
 import(VariantAnnotation)
 importFrom(BiocGenerics,score)
 importFrom(BiocGenerics,unstrand)
+importFrom(Biostrings,DNAStringSet)
+importFrom(Biostrings,DNAStringSetList)
 importFrom(Biostrings,letterFrequency)
 importFrom(GenomeInfoDb,"genome<-")
 importFrom(GenomeInfoDb,"seqlengths<-")
@@ -168,3 +171,4 @@ importFrom(utils,read.csv)
 importFrom(utils,read.delim)
 importFrom(utils,tail)
 importFrom(utils,write.csv)
+importFrom(utils,write.table)
