@@ -1,0 +1,22 @@
+@RG	ID:PureCN	SM:LIB-02240e4
+CONTIG	POSITION	REF_COUNT	ALT_COUNT	REF_NUCLEOTIDE	ALT_NUCLEOTIDE
+chr1	114515871	177	189	G	A
+chr1	150044293	119	157	T	G
+chr1	158449835	209	222	A	G
+chr1	158450154	401	294	G	A
+chr1	158450311	323	262	C	T
+chr1	158450374	351	269	A	G
+chr1	160062206	76	63	C	T
+chr1	177902370	97	60	C	A
+chr1	200967559	115	137	C	G
+chr1	247419414	138	205	T	C
+chr1	247419499	242	320	C	T
+chr1	248085080	35	32	C	T
+chr1	248085104	157	116	G	A
+chr2	10262881	121	136	C	T
+chr2	10263895	118	96	C	G
+chr2	69472504	121	70	C	T
+chr2	138413092	35	79	G	A
+chr2	138434106	56	134	A	G
+chr2	185798411	34	67	G	A
+chr2	188361624	50	107	A	G
